# gclean

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  mcp.json
.actor/: actor.json  dataset_schema.json  input_schema.json  output_schema.json
src/: actor.rs  app.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  service.rs  state.rs  telemetry.rs
tests/: api_contract.rs
