[package]
name = "email-validator-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Production-ready scaffold for an email validation API"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
http = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["compression-full", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
