[package]
name = "email-validator-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Apify actor for external email validation API"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }

[dev-dependencies]
serde_json = "1"
